<resources>
    <string name="app_name">HighWay Racer</string>
    <string name="Heart1">Heart</string>
    <string name="Heart2">Heart2</string>
    <string name="Heart3">Heart3</string>
    <string name="BlueCar">BlueCar</string>
    <string name="RedCar">RedCar</string>
    <string name="RaceCar">RaceCar</string>
    <string name="LeftArrow">LeftArrow</string>
    <string name="RightArrow">RightArrow</string>
    <string name="ToolBarExitToMenu">ToolBarExitToMenu</string>
    <string name="GameOver">GameOver</string>
    <string name="ToolBarGameRestart">ToolBarGameRestart</string>
    <string name="ToolBarGamePause">CountDownTimer</string>
    <string name="CountdownTimer">3</string>
    <string name="EasyGameMode">Easy</string>
    <string name="MediumGameMode">Medium</string>
    <string name="HardGameMode">Hard</string>
    <string name="Sensors">Car Sensor</string>
    <string name="SensorsMode">Tilt Left &amp; Right</string>
    <string name="SensorsSpeedMode">Tilt UP &amp; Down</string>
    <string name="SensorsSpeedModeText">Speed Sensor</string>
    <string name="ShowRecords">Show Records</string>
    <string name="ChooseCarColor">Choose Car Color</string>
    <string name="km">KM</string>
    <string name="coins">Coins</string>
    <string name="game_mode">Game Mode</string>
    <string name="sensor_mode_activate">Sensor Mode Activate</string>
    <string name="RecordsInfo"><![CDATA[      Place       KM       Coins     difficulty    Sensor Activated]]></string>
    <string name="RecordsInfoEmpty">"                      Play a game and add Records!"</string>





</resources>