<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/Main_Btn_EasyGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EasyGameMode" />


    <Button
        android:id="@+id/Main_Btn_MediumGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MediumGameMode" />

    <Button
        android:id="@+id/Main_Btn_HardGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HardGameMode" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/Main_Btn_SensorsMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SensorsMode"
       />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/Main_Btn_SensorsSpeedMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SensorsSpeedMode"
        />

    <Button
        android:id="@+id/Main_Btn_ShowRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowRecords" />

</androidx.appcompat.widget.LinearLayoutCompat>