<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="10dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="15"

        >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/List_Record_IV_Place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="85"
        android:orientation="horizontal"
        >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/List_Record_TV_KM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="15dp"

        android:text="@string/km" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/List_Record_TV_Coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:paddingTop="15dp"

        android:text="@string/coins" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/List_Record_TV_GameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:paddingTop="15dp"

        android:text="@string/game_mode" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/List_Record_TV_SensorMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:paddingTop="15dp"

        android:text="@string/sensor_mode_activate" />

    </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>